see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-May-2010 Christophe Demko
 ^ Change template default style when installing
 # Fixed issue [#20488] Small CSS issue in config modal (Viet Vu Hoang)

18-May-2010 Jean-Marie Simonet
# Config fieldset description patch (Thanks you Dennis)
# Consolidated some strings


-------------------- 1.6.0 Beta Release [17-May-2010] ------------------

17-May-2010 Ron Severdia
# Fixed UI in Menu Manager and ACL widget

17-May-2010 Mark Dexter
# Fix display error in Parks image gallery

17-May-2010 Jean-Marie Simonet
$ Fixed some beez language strings + a CSS in bluestork
$ Fixed some com_users language issues
$ Adding missing strings in com_users (WIP)

17-May-2010 Ron Severdia
# Fix CSS & language strings for Weblinks UI
+ Added missing icon
$ Language fixes

17-May-2010 Christophe Demko
 $ Fix one string
 # Fix xml files
 # Fix PHP Notice:  Undefined variable: file in libraries/joomla/installer/adapters/component.php on line 1328
 # Fix [#20429] Last Visit Date -1-11-30 00:00:00 When Creating New User (Matt Thomas)
 # Fix PHP Warning:  date(): It is not safe to rely on the system's timezone settings. You are *required* to use the date.timezone setting or the date_default_timezone_set()
 # Fix some css for administrator login
 # Ensure there exists a default published menu item when changing home
 # Ensure there exists a default menu item while deleting menu items
 # Ensure there exists a default menu item while deleting menus
 # Fix display modules linked to a menu (menus view)
 # Fix sample_data.sql
 # Rename bad named images
 # Fix [#20300] Article archive
 ^ Ordering of toolbar icons for some views
