@@ -9,159 +9,7 @@
 	<authorUrl>www.joomla.org</authorUrl>
 	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
 	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
-	<description></description>
-	<files>
-		<filename>xx-XX.com_admin.ini</filename>
-		<filename>xx-XX.com_admin.sys.ini</filename>
-		<filename>xx-XX.com_banners.ini</filename>
-		<filename>xx-XX.com_banners.sys.ini</filename>
-		<filename>xx-XX.com_cache.ini</filename>
-		<filename>xx-XX.com_cache.sys.ini</filename>
-		<filename>xx-XX.com_categories.ini</filename>
-		<filename>xx-XX.com_categories.sys.ini</filename>
-		<filename>xx-XX.com_checkin.ini</filename>
-		<filename>xx-XX.com_checkin.sys.ini</filename>
-		<filename>xx-XX.com_comments.ini</filename>
-		<filename>xx-XX.com_comments.sys.ini</filename>
-		<filename>xx-XX.com_config.ini</filename>
-		<filename>xx-XX.com_config.sys.ini</filename>
-		<filename>xx-XX.com_contact.ini</filename>
-		<filename>xx-XX.com_contact.sys.ini</filename>
-		<filename>xx-XX.com_content.ini</filename>
-		<filename>xx-XX.com_content.sys.ini</filename>
-		<filename>xx-XX.com_cpanel.ini</filename>
-		<filename>xx-XX.com_cpanel.sys.ini</filename>
-		<filename>xx-XX.com_installer.ini</filename>
-		<filename>xx-XX.com_installer.sys.ini</filename>
-		<filename>xx-XX.com_languages.ini</filename>
-		<filename>xx-XX.com_languages.sys.ini</filename>
-		<filename>xx-XX.com_login.ini</filename>
-		<filename>xx-XX.com_login.sys.ini</filename>
-		<filename>xx-XX.com_mailto.ini</filename>
-		<filename>xx-XX.com_mailto.sys.ini</filename>
-		<filename>xx-XX.com_media.ini</filename>
-		<filename>xx-XX.com_media.sys.ini</filename>
-		<filename>xx-XX.com_menus.ini</filename>
-		<filename>xx-XX.com_menus.sys.ini</filename>
-		<filename>xx-XX.com_messages.ini</filename>
-		<filename>xx-XX.com_messages.sys.ini</filename>
-		<filename>xx-XX.com_modules.ini</filename>
-		<filename>xx-XX.com_modules.sys.ini</filename>
-		<filename>xx-XX.com_newsfeeds.ini</filename>
-		<filename>xx-XX.com_newsfeeds.sys.ini</filename>
-		<filename>xx-XX.com_plugins.ini</filename>
-		<filename>xx-XX.com_plugins.sys.ini</filename>
-		<filename>xx-XX.com_redirect.ini</filename>
-		<filename>xx-XX.com_redirect.sys.ini</filename>
-		<filename>xx-XX.com_search.ini</filename>
-		<filename>xx-XX.com_search.sys.ini</filename>
-		<filename>xx-XX.com_templates.ini</filename>
-		<filename>xx-XX.com_templates.sys.ini</filename>
-		<filename>xx-XX.com_users.ini</filename>
-		<filename>xx-XX.com_users.sys.ini</filename>
-		<filename>xx-XX.com_weblinks.ini</filename>
-		<filename>xx-XX.com_weblinks.sys.ini</filename>
-		<filename>xx-XX.com_wrapper.ini</filename>
-		<filename>xx-XX.com_wrapper.sys.ini</filename>
-		<filename>xx-XX.ini</filename>
-		<filename>xx-XX.mod_comments_summary.ini</filename>
-		<filename>xx-XX.mod_comments_summary.sys.ini</filename>
-		<filename>xx-XX.mod_custom.ini</filename>
-		<filename>xx-XX.mod_custom.sys.ini</filename>
-		<filename>xx-XX.mod_feed.ini</filename>
-		<filename>xx-XX.mod_feed.sys.ini</filename>
-		<filename>xx-XX.mod_latest.ini</filename>
-		<filename>xx-XX.mod_latest.sys.ini</filename>
-		<filename>xx-XX.mod_logged.ini</filename>
-		<filename>xx-XX.mod_logged.sys.ini</filename>
-		<filename>xx-XX.mod_login.ini</filename>
-		<filename>xx-XX.mod_login.sys.ini</filename>
-		<filename>xx-XX.mod_menu.ini</filename>
-		<filename>xx-XX.mod_menu.sys.ini</filename>
-		<filename>xx-XX.mod_online.ini</filename>
-		<filename>xx-XX.mod_online.sys.ini</filename>
-		<filename>xx-XX.mod_popular.ini</filename>
-		<filename>xx-XX.mod_popular.sys.ini</filename>
-		<filename>xx-XX.mod_quickicon.ini</filename>
-		<filename>xx-XX.mod_quickicon.sys.ini</filename>
-		<filename>xx-XX.mod_status.ini</filename>
-		<filename>xx-XX.mod_status.sys.ini</filename>
-		<filename>xx-XX.mod_submenu.ini</filename>
-		<filename>xx-XX.mod_submenu.sys.ini</filename>
-		<filename>xx-XX.mod_title.ini</filename>
-		<filename>xx-XX.mod_title.sys.ini</filename>
-		<filename>xx-XX.mod_toolbar.ini</filename>
-		<filename>xx-XX.mod_toolbar.sys.ini</filename>
-		<filename>xx-XX.mod_unread.ini</filename>
-		<filename>xx-XX.mod_unread.sys.ini</filename>
-		<filename>xx-XX.plg_authentication_example.ini</filename>
-		<filename>xx-XX.plg_authentication_example.sys.ini</filename>
-		<filename>xx-XX.plg_authentication_gmail.ini</filename>
-		<filename>xx-XX.plg_authentication_gmail.sys.ini</filename>
-		<filename>xx-XX.plg_authentication_joomla.ini</filename>
-		<filename>xx-XX.plg_authentication_joomla.sys.ini</filename>
-		<filename>xx-XX.plg_authentication_ldap.ini</filename>
-		<filename>xx-XX.plg_authentication_ldap.sys.ini</filename>
-		<filename>xx-XX.plg_authentication_openid.ini</filename>
-		<filename>xx-XX.plg_authentication_openid.sys.ini</filename>
-		<filename>xx-XX.plg_content_comments.ini</filename>
-		<filename>xx-XX.plg_content_comments.sys.ini</filename>
-		<filename>xx-XX.plg_content_emailcloak.ini</filename>
-		<filename>xx-XX.plg_content_emailcloak.sys.ini</filename>
-		<filename>xx-XX.plg_content_geshi.ini</filename>
-		<filename>xx-XX.plg_content_geshi.sys.ini</filename>
-		<filename>xx-XX.plg_content_loadmodule.ini</filename>
-		<filename>xx-XX.plg_content_loadmodule.sys.ini</filename>
-		<filename>xx-XX.plg_content_pagebreak.ini</filename>
-		<filename>xx-XX.plg_content_pagebreak.sys.ini</filename>
-		<filename>xx-XX.plg_content_pagenavigation.ini</filename>
-		<filename>xx-XX.plg_content_pagenavigation.sys.ini</filename>
-		<filename>xx-XX.plg_content_vote.ini</filename>
-		<filename>xx-XX.plg_content_vote.sys.ini</filename>
-		<filename>xx-XX.plg_editors_codemirror.ini</filename>
-		<filename>xx-XX.plg_editors_codemirror.sys.ini</filename>
-		<filename>xx-XX.plg_editors_none.ini</filename>
-		<filename>xx-XX.plg_editors_tinymce.ini</filename>
-		<filename>xx-XX.plg_editors_tinymce.sys.ini</filename>
-		<filename>xx-XX.plg_editors-xtd_article.ini</filename>
-		<filename>xx-XX.plg_editors-xtd_article.sys.ini</filename>
-		<filename>xx-XX.plg_editors-xtd_image.ini</filename>
-		<filename>xx-XX.plg_editors-xtd_image.sys.ini</filename>
-		<filename>xx-XX.plg_editors-xtd_pagebreak.ini</filename>
-		<filename>xx-XX.plg_editors-xtd_pagebreak.sys.ini</filename>
-		<filename>xx-XX.plg_editors-xtd_readmore.ini</filename>
-		<filename>xx-XX.plg_editors-xtd_readmore.sys.ini</filename>
-		<filename>xx-XX.plg_search_categories.ini</filename>
-		<filename>xx-XX.plg_search_categories.sys.ini</filename>
-		<filename>xx-XX.plg_search_contacts.ini</filename>
-		<filename>xx-XX.plg_search_contacts.sys.ini</filename>
-		<filename>xx-XX.plg_search_content.ini</filename>
-		<filename>xx-XX.plg_search_content.sys.ini</filename>
-		<filename>xx-XX.plg_search_newsfeeds.ini</filename>
-		<filename>xx-XX.plg_search_newsfeeds.sys.ini</filename>
-		<filename>xx-XX.plg_search_weblinks.ini</filename>
-		<filename>xx-XX.plg_search_weblinks.sys.ini</filename>
-		<filename>xx-XX.plg_system_cache.ini</filename>
-		<filename>xx-XX.plg_system_cache.sys.ini</filename>
-		<filename>xx-XX.plg_system_debug.ini</filename>
-		<filename>xx-XX.plg_system_debug.sys.ini</filename>
-		<filename>xx-XX.plg_system_log.ini</filename>
-		<filename>xx-XX.plg_system_log.sys.ini</filename>
-		<filename>xx-XX.plg_system_redirect.ini</filename>
-		<filename>xx-XX.plg_system_redirect.sys.ini</filename>
-		<filename>xx-XX.plg_system_remember.ini</filename>
-		<filename>xx-XX.plg_system_remember.sys.ini</filename>
-		<filename>xx-XX.plg_system_sef.ini</filename>
-		<filename>xx-XX.plg_system_sef.sys.ini</filename>
-		<filename>xx-XX.plg_user_contactcreator.ini</filename>
-		<filename>xx-XX.plg_user_contactcreator.sys.ini</filename>
-		<filename>xx-XX.plg_user_joomla.ini</filename>
-		<filename>xx-XX.plg_user_joomla.sys.ini</filename>
-		<filename>xx-XX.plg_user_profile.ini</filename>
-		<filename>xx-XX.plg_user_profile.sys.ini</filename>
-		<filename>xx-XX.tpl_bluestork.ini</filename>
-		<filename>xx-XX.tpl_bluestork.sys.ini</filename>
-	</files>
+	<description>xx-XX test language</description>
 	<metadata>
 		<name>XXTestLang</name>
 		<tag>xx-XX</tag>
