@@ -9,65 +9,7 @@
 	<authorUrl>www.joomla.org</authorUrl>
 	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
 	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
-	<description></description>
-	<files>
-		<filename>xx-XX.com_contact.ini</filename>
-		<filename>xx-XX.com_content.ini</filename>
-		<filename>xx-XX.com_mailto.ini</filename>
-		<filename>xx-XX.com_media.ini</filename>
-		<filename>xx-XX.com_messages.ini</filename>
-		<filename>xx-XX.com_newsfeeds.ini</filename>
-		<filename>xx-XX.com_search.ini</filename>
-		<filename>xx-XX.com_users.ini</filename>
-		<filename>xx-XX.com_weblinks.ini</filename>
-		<filename>xx-XX.com_wrapper.ini</filename>
-		<filename>xx-XX.ignore.php</filename>
-		<filename>xx-XX.ini</filename>
-		<filename>xx-XX.mod_articles_archive.ini</filename>
-		<filename>xx-XX.mod_articles_archive.sys.ini</filename>
-		<filename>xx-XX.mod_articles_category.ini</filename>
-		<filename>xx-XX.mod_articles_category.sys.ini</filename>
-		<filename>xx-XX.mod_articles_latest.ini</filename>
-		<filename>xx-XX.mod_articles_latest.sys.ini</filename>
-		<filename>xx-XX.mod_articles_news.ini</filename>
-		<filename>xx-XX.mod_articles_news.sys.ini</filename>
-		<filename>xx-XX.mod_articles_popular.ini</filename>
-		<filename>xx-XX.mod_articles_popular.sys.ini</filename>
-		<filename>xx-XX.mod_banners.ini</filename>
-		<filename>xx-XX.mod_banners.sys.ini</filename>
-		<filename>xx-XX.mod_breadcrumbs.ini</filename>
-		<filename>xx-XX.mod_breadcrumbs.sys.ini</filename>
-		<filename>xx-XX.mod_custom.ini</filename>
-		<filename>xx-XX.mod_custom.sys.ini</filename>
-		<filename>xx-XX.mod_feed.ini</filename>
-		<filename>xx-XX.mod_feed.sys.ini</filename>
-		<filename>xx-XX.mod_footer.ini</filename>
-		<filename>xx-XX.mod_footer.sys.ini</filename>
-		<filename>xx-XX.mod_login.ini</filename>
-		<filename>xx-XX.mod_login.sys.ini</filename>
-		<filename>xx-XX.mod_menu.ini</filename>
-		<filename>xx-XX.mod_menu.sys.ini</filename>
-		<filename>xx-XX.mod_random_image.ini</filename>
-		<filename>xx-XX.mod_random_image.sys.ini</filename>
-		<filename>xx-XX.mod_related_items.ini</filename>
-		<filename>xx-XX.mod_related_items.sys.ini</filename>
-		<filename>xx-XX.mod_search.ini</filename>
-		<filename>xx-XX.mod_search.sys.ini</filename>
-		<filename>xx-XX.mod_stats.ini</filename>
-		<filename>xx-XX.mod_stats.sys.ini</filename>
-		<filename>xx-XX.mod_syndicate.ini</filename>
-		<filename>xx-XX.mod_syndicate.sys.ini</filename>
-		<filename>xx-XX.mod_users_latest.ini</filename>
-		<filename>xx-XX.mod_users_latest.sys.ini</filename>
-		<filename>xx-XX.mod_weblinks.ini</filename>
-		<filename>xx-XX.mod_weblinks.sys.ini</filename>
-		<filename>xx-XX.mod_whosonline.ini</filename>
-		<filename>xx-XX.mod_whosonline.sys.ini</filename>
-		<filename>xx-XX.mod_wrapper.ini</filename>
-		<filename>xx-XX.mod_wrapper.sys.ini</filename>
-		<filename>xx-XX.tpl_rhuk_milkyway.ini</filename>
-		<filename>xx-XX.tpl_rhuk_milkyway.sys.ini</filename>
-	</files>
+	<description>xx-XX Test language</description>
 	<metadata>
 		<name>XXTestLang</name>
 		<tag>xx-XX</tag>
