@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+19-May-2010 Jean-Marie Simonet
+$ Updating en-GB.xml files
+
 18-May-2010 Christophe Demko
  ^ Change template default style when installing
  # Fixed issue [#20488] Small CSS issue in config modal (Viet Vu Hoang)
